fix accordion mobile layout

--- a/style.css
+++ b/style.css
@@ -66,9 +66,13 @@ button {
   border-radius: 0;
 }
 
-div {
+.button-box {
   text-align: center;
 }
+
+/*//////////////////////////////////////
+/////////-- ACCORDION BOX --////////////
+///////////////////////////////////// */
 
 .accordion-box {
   min-width: 320px;
@@ -131,12 +135,16 @@ input:checked + label {
   display: flex;
 }
 
-img {
+.placeholder-image {
   width: 200px;
   height: 225px;
   border: 1px solid #f2f2f2;
   margin: 40px 15px;
-  align-items: center;
+  align-self: center;
+}
+
+.placeholder-image2 {
+  display: none;
 }
 
 .tab-text-container {
@@ -151,4 +159,44 @@ img {
 
 .tab-text-container p {
   margin: 20px 0;
+}
+
+/*//////////////////////////////////////
+/////////-- FLEXIBLE BOX --/////////////
+///////////////////////////////////// */
+
+
+.flex-card-title {
+  
+}
+
+
+@media (max-width: 600px) {
+  header {
+    flex-direction: column;
+  }
+  
+/*///////-- ACCORDION BOX --//////////*/
+  
+  label {
+    width: 100%;
+    text-align: left;
+  }
+  
+  .accordion-description {
+    flex-direction: column;
+  }
+  
+  .accordion-description .placeholder-image {
+    margin: 0 auto;
+  }
+  
+  .placeholder-image {
+    display: none;
+  }
+  
+  .placeholder-image2 {
+    display: block;
+    width: 100%;
+  }
 }
